--- a/index.htm
+++ b/index.htm
@@ -1,16 +1,15 @@
 <!doctype html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta name="description" content="A quiz game for ninjas">
-	<meta name = "author" content="Retnuh">
-	<title>Quiz Ninja</title>
-	<link rel="stylesheet" type="text/css" href="css/styles.css">
+  <meta charset="utf-8">
+  <meta name="description" content="A quiz game for ninjas">
+  <meta name="author" content="DAZ">
+  <title>Quiz Ninja</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-	<header>
-		<h1>Quiz Ninja</h1>
-	</header>
-<script type="text/javascript" src="js/scripts.js"></script>
-</body>
+  <header>
+    <h1>Quiz Ninja!</h1>
+  </header></body>
+  <script src="js/scripts.js"></script>
 </html>
