--- a/index.htm
+++ b/index.htm
@@ -10,6 +10,7 @@
 <body>
   <header>
     <h1>Quiz Ninja!</h1>
-  </header></body>
+  </header>
+</body>
   <script src="js/scripts.js"></script>
 </html>
